namespace Backend.api.Enums
{
    public enum UserRole
    {
        User,
        Admin
    }
}