@startuml
!theme plain
skinparam PackageStyle rectangle
left to right direction


package "Entities" {
  package "DTOs"{
    class UserCreateDTO <<dto>>{
      - string Username
      - string Password
      - string Email
      - base64? ProfileImage
    }

    class ProfileDTO<<dto>>{
      - string Username
      - string Email
      - base64? ProfileImage
      - file? CurrentCV
      - files? RelavantDocuments
    }
 
    class FileUploadDto <<dto>>{
      - array of files
    }

    class ConsentStatusDTO <<dto>> {
        + bool NeedsReconsent
        + string CurrentVersionTag
        + string TermsUrl
        + DateTime? LastAcceptedAt
    }

    class ConsentAcceptanceDTO <<dto>> {
        + Guid TermsId
        + string UserIpAddress
        + string UserAgent
        + bool AgreesToProcessing
    }

    class RetractionRequestDTO <<dto>> {
        + string Reason <<Optional>>
        + bool ConfirmPermanentDeletion
    }

  }
    enum UserRole {
        User
        Admin
    }

    enum FileCategory{
      AiDraft
      UserDraft
      Cv
      RelaventDocuments
    }

    class User <<Entity>> {
        - Guid Id
        - UserRole Role
        - String Email
        - String Username
        - String Password
    }

    class Consent <<Entity>> {
        - Guid Id 
        - Guid UserId 
        - User User 
        - bool ConsentGiven 
        - Guid FileId 
        - S3File File 
        - Term TermsAccepted 
    }

    class Profile <<Entity>>{
      - Guid Id
      - Guid UserId
      - S3File CurrentCv
      - Collection<S3File> RelavantDocuments
      - 
    }

    class S3File <<Entity>> {
        - Guid Id
        - Guid OwnerId
        - String S3Key
        - String ChecksumHash
        - DateTime UploadTime

    }

    class AIProcessingJob <<Entity>> {
        - Guid Id
        - JobStatus Status
        - Guid? ResultFileId
        - Collection<S3File> RelativeFiles
#has a one to many relationship with the files that were given to it
    }

    class AiDraft <<Entity>>{
      - Guid Id
      - Guid AiProcessingJob
      - Guid DraftFileId
    }

    class Term{
      - Inherits S3File
      - String Version
      - Bool Active

    }


    Term --|> S3File : Inherits
}

package "Services" {
    package "Interfaces"{
      interface IS3StorageService {
        + Task<S3File> UploadFileAsync()
        + Task<S3File> DeleteFileAsync()
        + Task<S3File> CreateSignedUrl()
        + Task<S3File> PermanentlyDeleteUserFiles()
      }

      interface IAIService {
          + Task<string> RunInferenceAsync()
      }

      interface IConsentService {
      + GiveConsent()
      + RetractConsent()
      + AcceptTerms()
      + RetractTermsConsent()
      + UserDeleted()
      }

      interface IUserService{
      - DbContext _db
      + CreateUser()
      + GetUser()
      + Login()
      + ChangePassword()
      + RequestPasswordReset()
      + HardDeleteAccount()
      + GetUserProfile()
    }
    }

    class OpenAiService {
        - IS3StorageService _s3
        - IAIService _ai
        - IRepository _db
        + Task GenerateDraft()
        + Task AnalyseJobPosting()
        + Task AnalyseUserDocuments()
        + Task MatchUserCompetences
    }

    class S3StorageService {
        - 
        + Task<S3File> UploadFileAsync()
        + Task<S3File> DeleteFileAsync()
        + Task<S3File> CreateSignedUrl()
        + Task<S3File> PermentlyDeleteUserFiles()
    }

    class ConsentService {
      - DbContext _db
      + GiveConsent()
      + RetractConsent()
      + AcceptTerms()
      + RetractAccountConsent()
      + RetractFileConsent()
      + UserDeleted()
      + VerifyConsent()

    }

    class UserService{
      - DbContext _db
      + CreateUser()
      + GetUser()
      + Login()
      + ChangePassword()
      + RequestPasswordReset()
      + HardDeleteAccount()
      + GetUserProfile()
    }

OpenAiService ..|> IAIService : Implements
UserService ..|> IUserService : Implements
OpenAiService --> IS3StorageService : Uses
ConsentService ..|> IConsentService : Implements
S3StorageService ..|> IS3StorageService : Implements
}

package "Controllers"{
  class UserController{
    - IUserService _user
    + CreateUser(createuser dto) return created or a 40x message
    + GetUser(Guid id) return UserDto or a 40x message
    + UpdateUser(UserDto dto) return nocontent or a 40x message
    + DeleteUser(Guid id) return nocontent or a 40x message
  }

  class FileController{
    + IS3StorageService _s3
    + UploadFile(UploadFileDto dto) return 201 or 40x
    + DeleteFile(Guid fileId) return nocontent or 40x
    + DownloadFile(Guid fileId) return ok or 40x
  }

  class ConsentController{
    - IConsentService _consent
    + RetractUserConsent() return nocontent or a 40x
    + RetractFileConsent() return nocontent or a 40x
  }

  class AiController{
    - IS3StorageService _s3
    - IAiService _ai
    + CreateDraft()
    + AnalyseJobPostingLink()
    + AnalyseJobPostingPDF()
  }

FileController --> IS3StorageService : Uses
ConsentController --> IConsentService : Uses
UserController --> IConsentService : Uses
}

package "Data" {
  class ApplyAIDbContext {
        + DbSet<User> Users
        + DbSet<S3File> Files
        --
        # OnModelCreating(ModelBuilder)
    }
OpenAiService --> ApplyAIDbContext : Uses
ConsentService --> ApplyAIDbContext : Uses
S3StorageService --> ApplyAIDbContext : Uses
UserService --> ApplyAIDbContext : Uses
}

@enduml